--- a/Ekrut - client/src/fxml/CustomerPanel.fxml
+++ b/Ekrut - client/src/fxml/CustomerPanel.fxml
@@ -19,11 +19,6 @@
             <Image url="@../../images/logout%20icon.png" />
          </image>
       </ImageView>
-      <Button fx:id="btnMakeOrder" layoutX="106.0" layoutY="131.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="180.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Make new order">
-         <font>
-            <Font name="System Bold Italic" size="18.0" />
-         </font>
-      </Button>
       <Label fx:id="welcomeLbl" layoutX="74.0" layoutY="38.0" text="Welcome back">
          <font>
             <Font name="System Bold Italic" size="36.0" />
@@ -39,10 +34,20 @@
             <Image url="@../../images/EKrutLogo.png" />
          </image>
       </ImageView>
-      <Button fx:id="btnPickup" layoutX="106.0" layoutY="200.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="180.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Pickup">
+      <Button fx:id="btnMakeOrder" layoutX="103.0" layoutY="131.0" mnemonicParsing="false" onAction="#MakeOrder" prefHeight="54.0" prefWidth="180.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Make new order" visible="false">
          <font>
             <Font name="System Bold Italic" size="18.0" />
          </font>
       </Button>
+      <Button fx:id="btnPickup" layoutX="103.0" layoutY="200.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="180.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Pickup" visible="false">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Button>
+      <Label fx:id="errLbl" layoutX="41.0" layoutY="159.0" prefHeight="50.0" prefWidth="532.0" textFill="RED">
+         <font>
+            <Font name="Tahoma Bold" size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
