--- a/Ekrut - client/src/fxml/ChooseReportScreen.fxml
+++ b/Ekrut - client/src/fxml/ChooseReportScreen.fxml
@@ -35,7 +35,7 @@
             <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/reports.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="112.0" fitWidth="124.0" layoutX="391.0" layoutY="200.0">
+      <ImageView fitHeight="112.0" fitWidth="124.0" layoutX="391.0" layoutY="200.0" onMouseClicked="#CustomerReportImgClick">
          <image>
             <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/Customer%20report%20logo.jpg" />
          </image>
