--- a/Ekrut - client/src/fxml/CustomerReportScreen.fxml
+++ b/Ekrut - client/src/fxml/CustomerReportScreen.fxml
@@ -4,13 +4,14 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="406.0" prefWidth="591.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OrderReportController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="447.0" prefWidth="631.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CustomerReportController">
    <children>
       <Label layoutX="21.0" layoutY="22.0" text="Customers Report" textFill="#cf4c0a">
          <font>
@@ -18,13 +19,16 @@
          </font>
       </Label>
       <Button layoutX="21.0" layoutY="333.0" mnemonicParsing="false" style="-fx-background-color: 0;" />
-      <Label fx:id="reportDetailsLabel" layoutX="233.0" layoutY="71.0" prefHeight="17.0" prefWidth="109.0" />
-      <ImageView fitHeight="45.0" fitWidth="118.0" layoutX="14.0" layoutY="346.0" onMousePressed="#back" pickOnBounds="true" preserveRatio="true">
+      <Label fx:id="reportDetailsLabel" layoutX="19.0" layoutY="58.0" prefHeight="17.0" prefWidth="109.0">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
+      <ImageView fitHeight="45.0" fitWidth="118.0" layoutX="15.0" layoutY="391.0" onMousePressed="#back" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
          </image>
       </ImageView>
-      <BarChart fx:id="customerReportBarChart" layoutX="14.0" layoutY="88.0" prefHeight="248.0" prefWidth="547.0">
+      <BarChart fx:id="customerReportBarChart" animated="false" layoutX="14.0" layoutY="127.0" prefHeight="248.0" prefWidth="596.0">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
         </xAxis>
@@ -32,5 +36,7 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </BarChart>
+      <ComboBox fx:id="locationsComboBox" layoutX="278.0" layoutY="95.0" onAction="#loadDataToBarChart" prefWidth="150.0" />
+      <Label layoutX="177.0" layoutY="99.0" text="Choose Location:" />
    </children>
 </AnchorPane>
