--- a/Ekrut - client/src/fxml/ManageInventoryScreen.fxml
+++ b/Ekrut - client/src/fxml/ManageInventoryScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RegionManagerMainScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ManageInventoryController">
    <children>
       <ImageView fitHeight="216.0" fitWidth="150.0" layoutX="445.0" layoutY="178.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -32,6 +32,11 @@
       <ImageView fitHeight="26.0" fitWidth="75.0" layoutX="543.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/min-max-close.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="45.0" fitWidth="118.0" layoutX="14.0" layoutY="350.0" onMousePressed="#back" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
          </image>
       </ImageView>
    </children>
