--- a/Ekrut - client/src/fxml/OrderReportScreen.fxml
+++ b/Ekrut - client/src/fxml/OrderReportScreen.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OrderReportController">
    <children>
-      <ImageView fitHeight="59.0" fitWidth="79.0" layoutX="311.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="59.0" fitWidth="79.0" layoutX="228.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/reports.png" />
          </image>
@@ -38,7 +38,10 @@
           <NumberAxis label="Profit" side="LEFT" />
         </yAxis>
       </BarChart>
-      <Label fx:id="reportDetailsLabel" layoutX="213.0" layoutY="40.0" prefHeight="17.0" prefWidth="109.0" />
+      <Label fx:id="reportDetailsLabel" layoutX="29.0" layoutY="70.0" prefHeight="17.0" prefWidth="109.0">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
       <ImageView fitHeight="45.0" fitWidth="118.0" layoutX="14.0" layoutY="494.0" onMousePressed="#back" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
