--- a/Ekrut - client/src/fxml/StockStatusReportScreen.fxml
+++ b/Ekrut - client/src/fxml/StockStatusReportScreen.fxml
@@ -26,7 +26,10 @@
             <Image url="@../../images/min-max-close.png" />
          </image>
       </ImageView>
-      <Label fx:id="reportDetailsLabel" layoutX="300.0" layoutY="40.0" prefHeight="17.0" prefWidth="109.0" />
+      <Label fx:id="reportDetailsLabel" layoutX="29.0" layoutY="67.0" prefHeight="17.0" prefWidth="109.0">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
       <ImageView fitHeight="45.0" fitWidth="118.0" layoutX="14.0" layoutY="486.0" onMousePressed="#back" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
