--- a/Ekrut - client/src/fxml/CustomerReportScreen.fxml
+++ b/Ekrut - client/src/fxml/CustomerReportScreen.fxml
@@ -28,15 +28,20 @@
             <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
          </image>
       </ImageView>
-      <BarChart fx:id="customerReportBarChart" animated="false" layoutX="14.0" layoutY="127.0" prefHeight="248.0" prefWidth="596.0">
+      <BarChart fx:id="customerReportBarChart" animated="false" layoutX="14.0" layoutY="127.0" prefHeight="271.0" prefWidth="596.0" title="Customer Activity Histogram">
         <xAxis>
-          <CategoryAxis side="BOTTOM" />
+          <CategoryAxis label="Number Of Orders" prefHeight="44.0" prefWidth="523.0" side="BOTTOM" />
         </xAxis>
         <yAxis>
-          <NumberAxis side="LEFT" />
+          <NumberAxis label="Number of Customers" side="LEFT" />
         </yAxis>
       </BarChart>
-      <ComboBox fx:id="locationsComboBox" layoutX="278.0" layoutY="95.0" onAction="#loadDataToBarChart" prefWidth="150.0" />
-      <Label layoutX="177.0" layoutY="99.0" text="Choose Location:" />
+      <ComboBox fx:id="locationsComboBox" layoutX="281.0" layoutY="78.0" onAction="#loadDataToBarChart" prefWidth="150.0" />
+      <Label layoutX="183.0" layoutY="82.0" text="Choose Location:" />
+      <Label fx:id="errorLabel" layoutX="356.0" layoutY="32.0" prefHeight="17.0" prefWidth="167.0" textFill="RED">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
