--- a/Ekrut - client/src/fxml/CreateResupplyRequestScreen.fxml
+++ b/Ekrut - client/src/fxml/CreateResupplyRequestScreen.fxml
@@ -14,37 +14,27 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="465.0" prefWidth="651.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CreateResupplyRequestController">
    <children>
-      <Label fx:id="welcomeLabel" layoutX="19.0" layoutY="18.0" text="Welcome back">
-         <font>
-            <Font name="System Bold Italic" size="36.0" />
-         </font>
-      </Label>
-      <Button fx:id="addRequestBtn" layoutX="110.0" layoutY="372.0" mnemonicParsing="false" onAction="#addRequestClick" prefHeight="33.0" prefWidth="63.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Add">
+      <Button fx:id="addRequestBtn" layoutX="92.0" layoutY="311.0" mnemonicParsing="false" onAction="#addRequestClick" prefHeight="33.0" prefWidth="109.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Add Request">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Button>
-      <ImageView fitHeight="26.0" fitWidth="75.0" layoutX="590.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/min-max-close.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="38.0" layoutY="142.0" text="Store:" />
-      <Label layoutX="32.0" layoutY="187.0" text="Product:" />
-      <Label layoutX="14.0" layoutY="237.0" text="User (ID:name):" />
-      <Label layoutX="29.0" layoutY="289.0" text="Quantity:" />
-      <Label layoutX="63.0" layoutY="94.0" prefHeight="17.0" prefWidth="157.0" text="Add Resupply Request">
+      <Label layoutX="38.0" layoutY="105.0" text="Store:" />
+      <Label layoutX="32.0" layoutY="150.0" text="Product:" />
+      <Label layoutX="14.0" layoutY="200.0" text="User (ID:name):" />
+      <Label layoutX="29.0" layoutY="252.0" text="Quantity:" />
+      <Label layoutX="50.0" layoutY="31.0" prefHeight="26.0" prefWidth="214.0" text="Add Resupply Request">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="System Bold" size="17.0" />
          </font>
       </Label>
-      <TextField fx:id="quantityTxtField" layoutX="105.0" layoutY="285.0" />
+      <TextField fx:id="quantityTxtField" layoutX="105.0" layoutY="248.0" />
       <TableView fx:id="requestsTable" layoutX="326.0" layoutY="67.0" prefHeight="287.0" prefWidth="290.0">
         <columns>
           <TableColumn fx:id="storeCol" prefWidth="73.0" text="Store" />
           <TableColumn fx:id="productCol" prefWidth="66.5" text="Product" />
             <TableColumn fx:id="userCol" prefWidth="75.5" text="User ID" />
-            <TableColumn fx:id="quantityCol" prefWidth="74.0" text="Quantity" />
+            <TableColumn fx:id="quantityCol" onEditCommit="#onCellEdit" prefWidth="74.0" text="Quantity" />
         </columns>
       </TableView>
       <Separator layoutX="286.0" layoutY="79.0" orientation="VERTICAL" prefHeight="347.0" prefWidth="9.0" />
@@ -58,22 +48,21 @@
             <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
          </image>
       </ImageView>
-      <Label fx:id="formErrorLabel" layoutX="19.0" layoutY="320.0" prefHeight="33.0" prefWidth="245.0" textFill="RED">
+      <Label fx:id="formErrorLabel" layoutX="29.0" layoutY="371.0" prefHeight="33.0" prefWidth="245.0" textFill="RED">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
-      <ComboBox fx:id="storeLocationsComboBox" layoutX="105.0" layoutY="138.0" onAction="#storeOptionOnAction" prefWidth="150.0" />
-      <ComboBox fx:id="productsComboBox" layoutX="105.0" layoutY="183.0" prefWidth="150.0" />
-      <ComboBox fx:id="userIDComboBox" layoutX="105.0" layoutY="233.0" prefWidth="150.0" />
+      <ComboBox fx:id="storeLocationsComboBox" layoutX="105.0" layoutY="101.0" onAction="#storeOptionOnAction" prefWidth="150.0" />
+      <ComboBox fx:id="productsComboBox" layoutX="105.0" layoutY="146.0" prefWidth="150.0" />
+      <ComboBox fx:id="userIDComboBox" layoutX="105.0" layoutY="196.0" prefWidth="150.0" />
       <Button fx:id="removeRequestBtn" layoutX="480.0" layoutY="371.0" mnemonicParsing="false" onAction="#removeRequestClick" prefHeight="33.0" prefWidth="81.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Remove">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Button>
-      <Label fx:id="tableErrorLabel" layoutX="295.0" layoutY="417.0" prefHeight="17.0" prefWidth="253.0" textFill="RED">
+      <Label fx:id="tableErrorLabel" layoutX="333.0" layoutY="418.0" textFill="RED">
          <font>
             <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
+         </font></Label>
    </children>
 </AnchorPane>
