--- a/Ekrut - client/src/fxml/RegionManagerMainScreen.fxml
+++ b/Ekrut - client/src/fxml/RegionManagerMainScreen.fxml
@@ -14,7 +14,7 @@
             <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/manager.png" />
          </image>
       </ImageView>
-      <Label fx:id="welcomeLabel" layoutX="19.0" layoutY="18.0" text="Welcome back">
+      <Label fx:id="welcomeLabel" layoutX="19.0" layoutY="18.0">
          <font>
             <Font name="System Bold Italic" size="36.0" />
          </font>
