--- a/Ekrut - client/src/fxml/OrderMethodForm.fxml
+++ b/Ekrut - client/src/fxml/OrderMethodForm.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -55,8 +56,6 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="txtCity" layoutX="54.0" layoutY="29.0" prefHeight="25.0" prefWidth="91.0" />
-            <TextField fx:id="txtStreet" layoutX="69.0" layoutY="64.0" prefHeight="25.0" prefWidth="219.0" />
             <Label layoutX="14.0" layoutY="66.0" text="Street:">
                <font>
                   <Font name="System Bold" size="14.0" />
@@ -72,11 +71,13 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="lblErrStreet" layoutX="296.0" layoutY="68.0" prefHeight="17.0" prefWidth="213.0" textFill="RED">
+            <Label fx:id="lblErrStreet" layoutX="279.0" layoutY="68.0" prefHeight="17.0" prefWidth="213.0" textFill="RED">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
+            <TextField fx:id="txtStreet" layoutX="68.0" layoutY="64.0" prefHeight="25.0" prefWidth="202.0" />
+            <TextField fx:id="txtCity" layoutX="54.0" layoutY="29.0" prefHeight="25.0" prefWidth="91.0" />
          </children>
       </AnchorPane>
       <ImageView fitHeight="45.0" fitWidth="118.0" layoutX="20.0" layoutY="342.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
@@ -89,6 +90,6 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <ProgressBar fx:id="pb" layoutX="194.0" layoutY="354.0" prefHeight="18.0" prefWidth="131.0" progress="0.0" />
+      <ProgressBar fx:id="pb" layoutX="194.0" layoutY="354.0" prefHeight="18.0" prefWidth="131.0" progress="0.33" />
    </children>
 </AnchorPane>
