--- a/Ekrut - client/src/fxml/CartProduct.fxml
+++ b/Ekrut - client/src/fxml/CartProduct.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="38.0" prefWidth="207.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CartCellController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="38.0" prefWidth="234.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CartCellController">
    <children>
       <Text fx:id="nameLbl" layoutX="7.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="94.294921875" />
-      <Button fx:id="removeBtn" layoutX="112.0" layoutY="7.0" mnemonicParsing="false" onAction="#removePushed" text="-" />
-      <Button fx:id="addBtn" layoutX="176.0" layoutY="6.0" mnemonicParsing="false" onAction="#addPushed" text="+" />
-      <Text fx:id="quantLbl" layoutX="157.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <ImageView fx:id="addBtn" fitHeight="20.0" fitWidth="20.0" layoutX="200.0" layoutY="9.0" onMouseClicked="#addPushed" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/plus.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="removeBtn" fitHeight="20.0" fitWidth="20.0" layoutX="110.0" layoutY="9.0" onMouseClicked="#removePushed" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/minus.png" />
+         </image>
+      </ImageView>
+      <Text fx:id="quantLbl" layoutX="140.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="46.0">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></Text>
    </children>
 </AnchorPane>
