--- a/Ekrut - client/src/fxml/OrderPaymentScreen.fxml
+++ b/Ekrut - client/src/fxml/OrderPaymentScreen.fxml
@@ -1,5 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OperationEmpController" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseExited="#onMouseExit" onMouseMoved="#onMouseMove" prefHeight="400.0" prefWidth="625.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaymentController">
+   <children>
+      <ListView fx:id="listView" layoutX="259.0" layoutY="26.0" onMouseMoved="#onMouseMove" prefHeight="243.0" prefWidth="352.0" style="-fx-border-radius: 25; -fx-background-radius: 25;">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding></ListView>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="236.0" layoutX="14.0" layoutY="30.0" onMouseMoved="#onMouseMove" stroke="BLACK" strokeType="INSIDE" style="-fx-arc-height: 30; -fx-arc-width: 20;" width="238.0" />
+      <Text fx:id="nameText" layoutX="27.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" underline="true" wrappingWidth="195.10546875">
+         <font>
+            <Font name="Arial Italic" size="24.0" />
+         </font>
+      </Text>
+      <Text fx:id="addressText" layoutX="26.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address:" wrappingWidth="195.10546875">
+         <font>
+            <Font size="14.0" />
+         </font></Text>
+      <Text fx:id="emailText" layoutX="26.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" wrappingWidth="153.2109375">
+         <font>
+            <Font size="14.0" />
+         </font></Text>
+      <Text fx:id="phoneText" layoutX="25.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone:" wrappingWidth="153.2109375">
+         <font>
+            <Font size="14.0" />
+         </font></Text>
+      <Text fx:id="methodText" layoutX="25.0" layoutY="254.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Method:" wrappingWidth="129.607421875">
+         <font>
+            <Font size="14.0" />
+         </font></Text>
+      <Text fx:id="cardText" layoutX="24.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Credit Card: " wrappingWidth="222.10546875">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="54.0" layoutX="444.0" layoutY="281.0" onMouseMoved="#onMouseMove" stroke="BLACK" strokeType="INSIDE" style="-fx-arc-height: 30; -fx-arc-width: 20;" width="165.0" />
+      <Text fx:id="discountText" layoutX="455.0" layoutY="301.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Discount: " wrappingWidth="116.8701171875">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
+      <Text fx:id="totalSumText" layoutX="455.0" layoutY="324.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total sum: " wrappingWidth="140.587890625">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
+      <ImageView fx:id="backBtn" fitHeight="45.0" fitWidth="103.0" layoutX="17.0" layoutY="351.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/back%20icon.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="finishBtn" layoutX="470.0" layoutY="347.0" mnemonicParsing="false" onAction="#sendOrder" prefHeight="37.0" prefWidth="117.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Finish &amp; Pay">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Button>
+   </children>
+</AnchorPane>
