--- a/Ekrut - client/src/fxml/OrderScreen.fxml
+++ b/Ekrut - client/src/fxml/OrderScreen.fxml
@@ -10,55 +10,55 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseMoved="#onMouseMove" prefHeight="546.0" prefWidth="801.0" style="-fx-background-color: #faf2d7;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OrderScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseExited="#onMouseExit" onMouseMoved="#onMouseMove" prefHeight="528.0" prefWidth="840.0" style="-fx-background-color: #faf2d7;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OrderScreenController">
    <children>
-      <ListView fx:id="catlogList" layoutX="12.0" layoutY="70.0" prefHeight="338.0" prefWidth="530.0" style="-fx-selection-bar: transparent; -fx-border-color: black;" />
-      <ListView fx:id="cartList" layoutX="559.0" layoutY="70.0" prefHeight="338.0" prefWidth="219.0" style="-fx-border-color: black;" />
+      <ListView fx:id="catlogList" layoutX="12.0" layoutY="70.0" prefHeight="338.0" prefWidth="552.0" style="-fx-selection-bar: transparent; -fx-border-color: black;" />
+      <ListView fx:id="cartList" layoutX="575.0" layoutY="70.0" prefHeight="338.0" prefWidth="248.0" style="-fx-border-color: black;" />
       <ImageView fx:id="backBtn" fitHeight="39.0" fitWidth="109.0" layoutX="14.0" layoutY="482.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/back%20icon.png" />
          </image>
       </ImageView>
-      <Button fx:id="checkoutBtn" alignment="CENTER" contentDisplay="TOP" layoutX="634.0" layoutY="482.0" mnemonicParsing="false" onAction="#checkout" prefHeight="38.0" prefWidth="108.0" style="-fx-background-color: #f54655;" text="Checkout" textFill="WHITE">
+      <Button fx:id="checkoutBtn" alignment="CENTER" contentDisplay="TOP" layoutX="660.0" layoutY="477.0" mnemonicParsing="false" onAction="#checkout" prefHeight="38.0" prefWidth="108.0" style="-fx-background-color: #f54655;" text="Checkout" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
-      <ImageView fitHeight="46.0" fitWidth="43.0" layoutX="598.0" layoutY="479.0" onMouseClicked="#checkout" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="46.0" fitWidth="43.0" layoutX="624.0" layoutY="474.0" onMouseClicked="#checkout" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/checkout%20icon.png" />
          </image>
       </ImageView>
-      <Label alignment="CENTER" layoutX="559.0" layoutY="34.0" prefHeight="36.0" prefWidth="219.0" text="My Cart" textAlignment="CENTER" textFill="#cf4c0a">
+      <Label alignment="CENTER" layoutX="609.0" layoutY="34.0" prefHeight="36.0" prefWidth="219.0" text="My Cart" textAlignment="CENTER" textFill="#cf4c0a">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="144.0" layoutY="14.0" text="Product Catalog">
+      <Label layoutX="149.0" layoutY="15.0" text="Product Catalog">
          <font>
             <Font name="System Bold Italic" size="36.0" />
          </font>
       </Label>
-      <Text layoutX="619.0" layoutY="442.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Price:" wrappingWidth="91.90234375">
+      <Text layoutX="639.0" layoutY="435.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Price:" wrappingWidth="91.90234375">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <Text fx:id="priceText" layoutX="713.0" layoutY="444.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="140.78125">
+      <Text fx:id="priceText" layoutX="733.0" layoutY="437.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="76.78125">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <Text fx:id="discountLbl" layoutX="481.0" layoutY="467.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="RIGHT" wrappingWidth="228.90234375">
+      <Text fx:id="discountLbl" layoutX="525.0" layoutY="463.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="RIGHT" wrappingWidth="228.90234375">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <Text fx:id="discountPriceText" layoutX="714.0" layoutY="468.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="140.78125">
+      <Text fx:id="discountPriceText" layoutX="764.0" layoutY="463.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="69.78125">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <Line fx:id="line" endX="74.21875" endY="5.0" layoutX="677.0" layoutY="432.0" startX="-80.78125" startY="5.0" visible="false" />
+      <Line fx:id="line" endX="74.21875" endY="5.0" layoutX="698.0" layoutY="425.0" startX="-80.78125" startY="5.0" />
    </children>
 </AnchorPane>
