--- a/Ekrut - client/src/fxml/CustomerPanel.fxml
+++ b/Ekrut - client/src/fxml/CustomerPanel.fxml
@@ -29,12 +29,17 @@
             <Image url="@../../images/EKrutLogo.png" />
          </image>
       </ImageView>
-      <Button fx:id="btnMakeOrder" layoutX="103.0" layoutY="131.0" mnemonicParsing="false" onAction="#MakeOrder" prefHeight="54.0" prefWidth="180.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Make new order" visible="false">
+      <Button fx:id="btnMakeOrder" layoutX="103.0" layoutY="111.0" mnemonicParsing="false" onAction="#MakeOrder" prefHeight="54.0" prefWidth="180.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Make new order" visible="false">
          <font>
             <Font name="System Bold Italic" size="18.0" />
          </font>
       </Button>
-      <Button fx:id="btnPickup" layoutX="103.0" layoutY="200.0" mnemonicParsing="false" onAction="#PickupOrder" prefHeight="54.0" prefWidth="180.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Pickup" visible="false">
+      <Button fx:id="btnPickup" layoutX="103.0" layoutY="180.0" mnemonicParsing="false" onAction="#PickupOrder" prefHeight="54.0" prefWidth="180.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Pickup" visible="false">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnApproveDelivery" layoutX="103.0" layoutY="250.0" mnemonicParsing="false" onAction="#ApproveDelivery" prefHeight="54.0" prefWidth="180.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Approve Delivery" visible="false">
          <font>
             <Font name="System Bold Italic" size="18.0" />
          </font>
