--- a/Ekrut - client/src/fxml/ChooseReportScreen.fxml
+++ b/Ekrut - client/src/fxml/ChooseReportScreen.fxml
@@ -22,17 +22,17 @@
          </font></Label>
       <ImageView fitHeight="112.0" fitWidth="150.0" layoutX="32.0" layoutY="195.0" onMouseClicked="#StockStatusReportImgClick">
          <image>
-            <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/stock.png" />
+            <Image url="@../../images/stock.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="121.0" fitWidth="169.0" layoutX="195.0" layoutY="200.0" onMouseClicked="#OrdersReportImgClick">
          <image>
-            <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/reports.png" />
+            <Image url="@../../images/reports.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="112.0" fitWidth="124.0" layoutX="391.0" layoutY="200.0" onMouseClicked="#CustomerReportImgClick">
          <image>
-            <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/Customer%20report%20logo.jpg" />
+            <Image url="@../../images/Customer%20report%20logo.jpg" />
          </image>
       </ImageView>
       <Label layoutX="73.0" layoutY="179.0" text="Stock Report" />
@@ -51,7 +51,7 @@
       </Label>
           <ImageView fitHeight="45.0" fitWidth="118.0" layoutX="21.0" layoutY="344.0" onMousePressed="#back" pickOnBounds="true" preserveRatio="true">
               <image>
-                  <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
+                  <Image url="@../../images/back%20icon.png" />
               </image>
           </ImageView>
     </children>
