--- a/Ekrut - client/src/fxml/CreateResupplyRequestScreen.fxml
+++ b/Ekrut - client/src/fxml/CreateResupplyRequestScreen.fxml
@@ -45,7 +45,7 @@
       </Button>
       <ImageView fitHeight="39.0" fitWidth="109.0" layoutX="20.0" layoutY="416.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
+            <Image url="@../../images/back%20icon.png" />
          </image>
       </ImageView>
       <Label fx:id="formErrorLabel" layoutX="29.0" layoutY="371.0" prefHeight="33.0" prefWidth="245.0" textFill="RED">
