--- a/Ekrut - client/src/fxml/CustomerReportScreen.fxml
+++ b/Ekrut - client/src/fxml/CustomerReportScreen.fxml
@@ -25,7 +25,7 @@
          </font></Label>
       <ImageView fitHeight="45.0" fitWidth="118.0" layoutX="15.0" layoutY="391.0" onMousePressed="#back" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
+            <Image url="@../../images/back%20icon.png" />
          </image>
       </ImageView>
       <BarChart fx:id="customerReportBarChart" animated="false" layoutX="14.0" layoutY="127.0" prefHeight="271.0" prefWidth="596.0" title="Customer Activity Histogram">
