--- a/Ekrut - client/src/fxml/OrderReportScreen.fxml
+++ b/Ekrut - client/src/fxml/OrderReportScreen.fxml
@@ -15,7 +15,7 @@
    <children>
       <ImageView fitHeight="59.0" fitWidth="79.0" layoutX="228.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/reports.png" />
+            <Image url="@../../images/reports.png" />
          </image>
       </ImageView>
       <Label layoutX="21.0" layoutY="22.0" text="Orders Report" textFill="#cf4c0a">
@@ -39,7 +39,7 @@
          </font></Label>
       <ImageView fitHeight="45.0" fitWidth="118.0" layoutX="14.0" layoutY="494.0" onMousePressed="#back" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
+            <Image url="@../../images/back%20icon.png" />
          </image>
       </ImageView>
       <Label fx:id="deliveryOrdersInfo" layoutX="37.0" layoutY="424.0" />
