--- a/Ekrut - client/src/fxml/StockStatusReportScreen.fxml
+++ b/Ekrut - client/src/fxml/StockStatusReportScreen.fxml
@@ -32,7 +32,7 @@
          </font></Label>
       <ImageView fitHeight="45.0" fitWidth="118.0" layoutX="14.0" layoutY="486.0" onMousePressed="#back" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
+            <Image url="@../../images/back%20icon.png" />
          </image>
       </ImageView>
       <BarChart fx:id="dataBarGraph" animated="false" layoutX="29.0" layoutY="114.0" prefHeight="322.0" prefWidth="467.0">
