--- a/Ekrut - client/src/fxml/UpdateMinLimitInventoryScreen.fxml
+++ b/Ekrut - client/src/fxml/UpdateMinLimitInventoryScreen.fxml
@@ -14,7 +14,7 @@
    <children>
       <ImageView fitHeight="140.0" fitWidth="137.0" layoutX="449.0" layoutY="241.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/EKrutLogo.png" />
+            <Image url="../../images/EKrutLogo.png" />
          </image>
       </ImageView>
       <Label layoutX="30.0" layoutY="14.0" text="Update Min. limit" textFill="#cf4c0a">
@@ -34,7 +34,7 @@
       <Button fx:id="saveBtn" layoutX="274.0" layoutY="347.0" mnemonicParsing="false" onAction="#updateMinQuantity" text="Save" />
       <ImageView fitHeight="45.0" fitWidth="118.0" layoutX="26.0" layoutY="342.0" onMousePressed="#back" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/back%20icon.png" />
+            <Image url="@../../images/back%20icon.png" />
          </image>
       </ImageView>
    </children>
